--- a/Day10/grid.html
+++ b/Day10/grid.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Grid playground</h1>
     <div id="Container">
-           <div class="item">1</div>
+           <div class="one">1</div>
            <div class="item">2</div>
            <div class="item">3</div>
            <div class="item">4</div>
