--- a/Facebook_Login_page/facebook.html
+++ b/Facebook_Login_page/facebook.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Facebook Login</title>
   <link rel="stylesheet" href="facbook.css">
+  <link rel="stylesheet" href="responsivefacebook.css">
 </head>
 <body>
   <div class="main">
