--- a/MINI PROJECT COMBINE HTML CSS/Editing_webpage.html
+++ b/MINI PROJECT COMBINE HTML CSS/Editing_webpage.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="image.css">
+  <link rel="stylesheet" href="containt-box.css">
+  <link rel="stylesheet" href="downside.css">
 </head>
 
 <body>
@@ -83,11 +85,12 @@
   </div>
   <div class="main">
     <div class="images">
-      <img class="img2" src="img1.webp" alt="">
-      <img class="img3" src="img2.webp" alt="">
-      <img class="img4" src="img3.webp" alt="">
-      <img class="img5" src="img4.webp" alt="">
-      <img class="img1" src="img5.webp" alt="">
+      <img class="img2" src="images/img1.webp" alt="">
+      <img class="img3" src="images/img2.webp" alt="">
+      <img class="img4" src="images/img3.webp" alt="">
+      <img class="img5" src="images/img4.webp" alt="">
+      <img class="img1" src="images/img5.webp" alt="">
+      <span class="loader"></span>
     </div>
     <div class="main-container">
       <div class="container">
@@ -118,14 +121,37 @@
             </div>
           </div>
         </div>
-        <!-- <div class="style-images">
-                   <img class="img1" src="img1.webp" alt="">
-                    <img class="img2" src="img2.webp" alt="">
-                   <img class="img3" src="img3.webp" alt="">
-                   <img class="img4" src="img4.webp" alt="">
-            </div> -->
       </div>
     </div>
+  </div>
+  <div class="containt-box">
+    <p class="retouch">Retouch Selfies</p>
+    <h2 class="heading2">Award-Winning Tools for High-Quality and Flawless Photo Retouching</h2>
+    <p class="desc2">AirBrush offers award-winning portrait retouching, globally recognized for its excellence.
+      Utilizing advanced AI <br>technology, it provides precise and exceptional enhancements, delivering
+      professional-quality results effortlessly.</p>
+    <div class="free-download-btn">Free Download</div>
+    <img class="big-img" src="images/67786aed0a43185603dddefc7d71cbdd.webp" alt="">
+    <!-- <div class="itms-main">
+      <ul class="items">
+        <li><i class="fab fa-facebook-f"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fab fa-instagram"></i></li>
+        <li><i class="fab fa-linkedin-in"></i></li>
+      </ul>
+    </div> -->
+  </div>
+  <div class="down">
+    <div class="down-side">
+      <p class="paragraph2">PHOTO EDITOR</p>
+      <h2 class="heading3">Seamless Photo Editing with AirBrush's AI Tools</h2>
+      <p class="desc3">Experience seamless photo editing with AirBrush's online editor. Use intuitive tools for basic
+        adjustments and advanced portrait retouching. You can also improve photo quality with one click to adjust
+        lighting, unblur images, and enhance details, or quickly remove backgrounds and unwanted objects with AI
+        features.</p>
+      <div class="free-download-btn-two">Free Download</div>
+    </div>
+    <div><img class="img-new" src="images/photo_editor.webp" alt=""></div>
   </div>
 </body>
 
