--- a/MINI PROJECT COMBINE HTML CSS/Editing_webpage.html
+++ b/MINI PROJECT COMBINE HTML CSS/Editing_webpage.html
@@ -31,7 +31,7 @@
 
     <div class="sidebar_menu">
       <div class="logo">
-        <a href="#">Apna College</a>
+        <a href="#">MY WEB PAGE</a>
       </div>
 
       <div class="btn_two">
@@ -152,6 +152,17 @@
       <div class="free-download-btn-two">Free Download</div>
     </div>
     <div><img class="img-new" src="images/photo_editor.webp" alt=""></div>
+  </div>
+  <div id="down">
+     <div id="img-box">
+      <img id="img-new" src="images/video_editor.webp" alt="">
+     </div>
+     <div id="down-side">
+      <p class="paragraph2">VIDEO EDITING</p>
+      <h2 class="heading3">Enhance Your Videos with AirBrush's AI Video Editor</h2>
+      <p class="desc3">AirBrush’s video editor is perfect for portraits. Smooth your skin, erase dark circles, and apply makeup to your selfie videos. Our advanced online tools also help you enhance video quality and remove watermarks from videos with one click.</p>
+      <div class="free-download-btn-two">Free Download</div>
+     </div>
   </div>
 </body>
 
