--- a/Day13/Bootstrap.html
+++ b/Day13/Bootstrap.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
-  <div class="container">
+  <div class="btn-group">
+    <button class="btn btn-danger">One</button>
+    <button class="btn btn-primary">Two</button>
+    <button class="btn btn-warning">Three</button>
+  </div>
+
+  <!-- <div class="container-md">
     <h2>Bootstrap demo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quos voluptatem blanditiis harum dolore consequuntur nobis perferendis fugiat voluptatibus non, eveniet, neque animi nesciunt porro vel, soluta id aperiam delectus cum reprehenderit corporis error placeat? Aperiam exercitationem laboriosam rem et repudiandae, totam quos corporis consequatur quisquam sit illum dicta reiciendis illo veniam magni distinctio accusantium omnis facilis iste porro minus, soluta animi at quis. Suscipit consequatur nulla aut, eaque atque aspernatur odit mollitia maxime delectus doloremque est cum! Voluptatem numquam molestiae dolores explicabo? Beatae recusandae impedit ullam error qui eum exercitationem assumenda, molestiae eius excepturi doloremque adipisci temporibus quidem iusto laboriosam dicta. Quam eaque fuga illo, eligendi explicabo ut enim voluptate aspernatur ea perspiciatis accusantium dolore cupiditate delectus porro voluptatem, autem blanditiis dolorem, vel quasi. Totam eligendi natus velit corporis et minima fuga doloremque libero asperiores non? Delectus, iste harum esse eum omnis rem eaque deleniti officiis quas aspernatur asperiores error voluptas repudiandae iusto sint est saepe dignissimos sequi nihil accusamus atque consequuntur at? Dolorem totam illo sed obcaecati, incidunt cum ipsa similique eos expedita voluptates voluptate! Quisquam aliquid ducimus dignissimos maxime, perspiciatis adipisci? Dolores hic sit, fugit harum maiores veritatis odio voluptatem atque ex veniam cumque modi minus inventore est, natus nobis labore ipsum provident unde. Fugiat animi voluptatibus labore quas laborum maiores suscipit totam ab expedita fugit. Unde ex excepturi aperiam illo quo laudantium eos omnis exercitationem, blanditiis illum eaque esse ipsum officiis facilis odio recusandae deserunt architecto iste impedit accusamus incidunt harum corrupti doloremque! Placeat voluptates temporibus harum. Voluptas, reprehenderit animi optio provident iure culpa maiores doloremque modi cumque, error iste officiis sint inventore. Beatae debitis quisquam, facere dolorum voluptatibus dolores exercitationem repellat consequuntur eos fugit vero quis ea rerum minima est delectus voluptatem amet perspiciatis deleniti dolorem iusto! Debitis consequuntur animi quae suscipit, beatae error nostrum.</p>
   </div>
@@ -19,6 +25,19 @@
   <form action="" class="form">
     <label for="text">Name</label>
     <input type="text"></form>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script> 
+
+   <button type="button" class="btn btn-outline-success">Base class</button> -->
+
+
+   <!-- Badge -->
+    <!-- <span class="Badge bg-danger">10+</span>
+   <h3>Notification <span class="Badge bg-primary rounded-pill">10+</span> </h3>
+    
+   <div class="alert alert-danger">Download is fail</div>
+   <div class="alert alert-success">Congratulation
+    <button class="btn btn-close alert-dismissible fade show" data-bs-dismiss="alert" ></button>
+   </div> -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script> 
+  
 </body>
 </html>
